ログアウト用のリンクを追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,10 @@
   </head>
 
   <body class="<%= params[:action] %>">
+    <% if user_signed_in? %>
+      <%= link_to t('views.common.log_out'), destroy_user_session_path, data: { turbo_method: "delete" } %>
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
