Userの属性に郵便番号、住所、自己紹介文を追加

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -4,4 +4,19 @@
     <%= user.email %>
   </p>
 
+  <p>
+    <strong><%= User.human_attribute_name(:postal_code) %>:</strong>
+    <%= user.postal_code %>
+  </p>
+
+  <p>
+    <strong><%= User.human_attribute_name(:address) %>:</strong>
+    <%= user.address %>
+  </p>
+
+  <p>
+    <strong><%= User.human_attribute_name(:description) %>:</strong>
+    <%= user.description %>
+  </p>
+
 </div>
