フラッシュメッセージの実装場所を変更

--- a/app/assets/stylesheets/scaffolds.css
+++ b/app/assets/stylesheets/scaffolds.css
@@ -328,3 +328,11 @@ form input[type="submit"]:hover {
   display: inline-block;
   margin-right: 15px;
 }
+
+.notice {
+  color: green;
+}
+
+.alert {
+  color: red;
+}
