--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -2,7 +2,7 @@
 
   <p>
     <strong><%= User.human_attribute_name(:image) %>:</strong>
-    <%= image_tag user.image if user.image.attached? %>
+    <%= image_tag user.image.variant(resize_to_limit: [128, 128]) if user.image.attached? %>
   </p>
 
   <p>
