日報の一覧、詳細の表示を変更
・日報作成時の入力項目からuser_idを削除
・表示項目の変更（user_idを削除し、作成者、投稿日時を追加）
・CSSが反映されるようにclass指定を追加
・不要なflashメッセージを削除（重複するため）

--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,14 +1,16 @@
-<p style="color: green"><%= notice %></p>
-
 <h1>Reports</h1>
 
-<div id="reports">
+<div id="reports" class="index-items">
   <% @reports.each do |report| %>
-    <%= render report %>
-    <p>
-      <%= link_to "Show this report", report %>
-    </p>
+    <div class="index-item">
+      <%= render report %>
+      <p>
+        <%= link_to "Show this report", report %>
+      </p>
+    </div>
   <% end %>
 </div>
 
-<%= link_to "New report", new_report_path %>
+<nav class="page-nav">
+  <%= link_to "New report", new_report_path %>
+</nav>
