--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -1,6 +1,8 @@
-<p style="color: green"><%= notice %></p>
+<h1>日報の詳細</h1>
 
-<%= render @report %>
+<div class="show-item">
+  <%= render @report %>
+</div>
 
 <div>
   <%= link_to "Edit this report", edit_report_path(@report) %> |
