--- a/app/views/reports/_report.html.erb
+++ b/app/views/reports/_report.html.erb
@@ -1,5 +1,11 @@
 <div id="<%= dom_id report %>">
   <p>
+    <strong>作成者:</strong>
+    <% user = User.find(report.user_id) %>
+    <%= user.name.empty? ? user.email : user.name %>
+  </p>
+
+  <p>
     <strong>Title:</strong>
     <%= report.title %>
   </p>
@@ -10,8 +16,8 @@
   </p>
 
   <p>
-    <strong>User:</strong>
-    <%= report.user_id %>
+    <strong>投稿日時:</strong>
+    <%= report.created_at.strftime('%Y-%m-%d %H:%M') %>
   </p>
 
 </div>
