--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -4,9 +4,9 @@
   <%= render @report %>
 </div>
 
-<div>
+<nav class="page-nav">
   <%= link_to "Edit this report", edit_report_path(@report) %> |
   <%= link_to "Back to reports", reports_path %>
 
   <%= button_to "Destroy this report", @report, method: :delete %>
-</div>
+</nav>
