本、日報にコメントを投稿する機能を追加
・投稿、削除時にそれぞれ失敗したとき（save, destroy）の対応は未実装

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -10,3 +10,7 @@
 
   <%= button_to t('views.common.destroy', name: Book.model_name.human.downcase), @book, method: :delete %>
 </nav>
+
+<%= render partial: @book.comments %>
+
+<%= render 'comments/form', commentable: @book %>
