--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -1,7 +1,7 @@
 <h1>日報の詳細</h1>
 
 <div class="show-item">
-  <%= render @report %>
+  <%= render partial: 'reports/report', locals: { report: @report } %>
 </div>
 
 <nav class="page-nav">
@@ -14,6 +14,6 @@
   <%= button_to "Destroy this report", @report, method: :delete  if is_my_report %>
 </nav>
 
-<%= render partial: @report.comments %>
+<%= render partial: 'comments/comment', collection: @report.comments %>
 
-<%= render 'comments/form', commentable: @report %>
+<%= render partial: 'comments/form', locals: { commentable: @report } %>
