コメントが１件も無い場合にメッセージを表示する対応を追加

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -11,6 +11,10 @@
   <%= button_to t('views.common.destroy', name: Book.model_name.human.downcase), @book, method: :delete %>
 </nav>
 
-<%= render partial: 'comments/comment', collection: @book.comments %>
+<% if @book.comments.empty? %>
+  <p>コメントはありません。</p>
+<% else %>
+  <%= render partial: 'comments/comment', collection: @book.comments %>
+<% end %>
 
 <%= render partial: 'comments/form', locals: { commentable: @book } %>
