日報とコメントでそれぞれバリデーションエラーの内容を表示する
・HTML5の必須チェックがあるため、通常このバリデーションは発生しない

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,4 +17,4 @@
   <%= render partial: 'comments/comment', collection: @book.comments %>
 <% end %>
 
-<%= render partial: 'comments/form', locals: { commentable: @book } %>
+<%= render partial: 'comments/form', locals: { commentable: @book, comment: @comment } %>
