--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: [commentable, comment = Comment.new]) do |form| %>
+<%= form_with(model: [commentable, comment ||= Comment.new]) do |form| %>
   <% if comment.errors.any? %>
     <div style="color: red">
       <h2><%= t('views.common.validation_error', errors: i18n_error_count(comment.errors.count), name: Comment.model_name.human.downcase) %>:</h2>
