--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -13,6 +13,8 @@
       </td>
     </tbody>
   </table>
-
-  <%= button_to 'このコメントを削除', polymorphic_path([comment.commentable, comment]), method: :delete if user.id == current_user.id %>
+  <% if user.id == current_user.id %>
+    <%= link_to 'このコメントを編集', polymorphic_path([:edit, comment.commentable, comment]) %>
+    <%= button_to 'このコメントを削除', polymorphic_path([comment.commentable, comment]), method: :delete %>
+  <% end %>
 </div>
