--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,9 +1,9 @@
-<h1>Editing comment</h1>
+<h1><%= t('views.common.title_edit', name: Comment.model_name.human.downcase) %></h1>
 
 <%= render partial: "form", locals: {commentable: @commentable, comment: @comment } %>
 
 <br>
 
-<nav class="pabe-nav">
-  <%= link_to '戻る',  @commentable %>
+<nav class="page-nav">
+  <%= link_to t('views.common.back_to_target', name: Comment.model_name.human.downcase),  @commentable %>
 </nav>
