--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -1,4 +1,4 @@
-<h1>日報の詳細</h1>
+<h1><%= t('views.common.title_show', name: Report.model_name.human) %></h1>
 
 <div class="show-item">
   <%= render partial: 'reports/report', locals: { report: @report } %>
@@ -7,15 +7,15 @@
 <nav class="page-nav">
   <% is_my_report = current_user == @report.user %>
   <% if is_my_report%>
-    <%= link_to "Edit this report", edit_report_path(@report) %> |
+    <%= link_to t('views.common.edit', name: Report.model_name.human.downcase), edit_report_path(@report) %> |
   <% end %>
-  <%= link_to "Back to reports", reports_path %>
+  <%= link_to t('views.common.back', name: i18n_pluralize(Report.model_name.human.downcase)), reports_path %>
 
-  <%= button_to "Destroy this report", @report, method: :delete  if is_my_report %>
+  <%= button_to t('views.common.destroy', name: Report.model_name.human.downcase), @report, method: :delete  if is_my_report %>
 </nav>
 
 <% if @report.comments.empty? %>
-  <p>コメントはありません。</p>
+  <p><%= t 'views.common.not_exist', name: Comment.model_name.human %></p>
 <% else %>
   <%= render partial: 'comments/comment', collection: @report.comments %>
 <% end %>
