--- a/app/views/reports/_mention.html.erb
+++ b/app/views/reports/_mention.html.erb
@@ -1,10 +1,11 @@
 <div class="mentions-container">
   <% unless reports.empty? %>
-    <strong>この日報は以下の日報からリンクされています</strong>
+    <strong><%= t('views.mentions.title', name: Report.model_name.human) %>
     <ul>
       <% reports.each do |report| %>
         <li>
-          <%= link_to report.title, report %> からリンク
+          <%= link_to report.title, report %>
+          <%= t('views.mentions.linked_from') %>
         </li>
       <% end %>
     </ul>
