言及している日報の表示部分についてCSS対応(間隔調整のみ)

--- a/app/assets/stylesheets/scaffolds.css
+++ b/app/assets/stylesheets/scaffolds.css
@@ -319,3 +319,11 @@ form input[type="submit"] {
 form input[type="submit"]:hover {
   background-color: var(--global-primary-c-hover);
 }
+
+.mentions-container {
+  margin-top: 25px;
+}
+
+.mentions-container li {
+  margin-top: 5px;
+}
