--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -11,7 +11,7 @@
         </td>
         <td class="created_at">
           <%= t(Comment.human_attribute_name(:created_at)) %>
-          <%= comment.created_at.strftime('%Y-%m-%d %H:%M') %>
+          <%= l comment.created_at, format: :long %>
         </td>
       </tr>
       <tr>
