--- a/app/views/reports/_report.html.erb
+++ b/app/views/reports/_report.html.erb
@@ -17,7 +17,7 @@
 
   <p>
     <strong><%= Report.human_attribute_name(:created_at) %>:</strong>
-    <%= report.created_at.strftime('%Y-%m-%d %H:%M') %>
+    <%= l report.created_at, format: :long %>
   </p>
 
 </div>
