条件式の書き方を修正（unless -> if）

--- a/app/views/reports/_mentions.html.erb
+++ b/app/views/reports/_mentions.html.erb
@@ -1,5 +1,5 @@
 <div class="mentions-container">
-  <% unless reports.empty? %>
+  <% if reports.present? %>
     <strong><%= t('views.mentions.title', name: Report.model_name.human) %>
     <ul>
       <% reports.each do |report| %>
