終了タグの抜けを修正

--- a/app/views/reports/_mentions.html.erb
+++ b/app/views/reports/_mentions.html.erb
@@ -1,6 +1,8 @@
 <div class="mentions-container">
   <% if reports.present? %>
-    <strong><%= t('views.mentions.title', name: Report.model_name.human) %>
+    <strong>
+      <%= t('views.mentions.title', name: Report.model_name.human) %>
+    </strong>
     <ul>
       <% reports.each do |report| %>
         <li>
